# hyprproxlock

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD-git  README.md  hyprpoxlock.conf
.github/workflows/: git-release.yml  release.yml
src/: bluetooth.rs  config.rs  lock.rs  main.rs
