[package]
name = "hyprproxlock"
version = "0.1.0"
edition = "2024"
authors = ["Da4ndo <contact@da4ndo.com>"]
description = "A proximity-based daemon for Hyprland that triggers screen locking and unlocking through hyprlock based on Bluetooth device proximity."

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
anyhow = "1.0"
configparser = "3.1.0"
tracing-appender-localtime = "0.2"
chrono = "0.4"
